fix: adjust `z-index` of onboard

--- a/src/styles/onboard.css
+++ b/src/styles/onboard.css
@@ -69,8 +69,9 @@
   --onboard-border-radius-3: 8px;
 
   /* Z-index */
-  --onboard-modal-z-index: 1201;
-  --onboard-account-select-modal-z-index: 1201;
+  /* General modals are 998 because Keystone modal is 999 */
+  --onboard-modal-z-index: 997;
+  --onboard-account-select-modal-z-index: 997;
 }
 
 #walletconnect-qrcode-modal {
